# sppmsg

./: CMakeLists.txt  README.md
CGUI/include/CG/: Slider.h
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  client.cpp  client.hpp  clients.cpp  command.cpp  command.hpp  config.hpp  main.cpp  send.cpp  server.cpp  server.hpp
Utility/: CMakeLists.txt  command.cpp  config.hpp
cmake/: DetectArchCG.cmake  FindSFMLCG.cmake
